fixed mobile case study showcase tags alignment

--- a/styles/CaseStudy.module.css
+++ b/styles/CaseStudy.module.css
@@ -40,7 +40,7 @@
 @media(max-width: 768px){
 
     .showcaseContent{
-        gap: 2rem;
+        row-gap: 2rem;
     }
 
     .showcaseMeta{
@@ -50,8 +50,12 @@
     }
 
     .showcaseTags{
+        justify-self: stretch;
         text-align: left;
         gap: 1rem;
+        row-gap: 0.5rem;
+        grid-template-columns: 1fr 1fr;
+        grid-auto-flow:initial;
         justify-items: start;
     }
 
